<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IPS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="gps">GPS</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="z">Z:</string>
    <string name="s">S:</string>
    <string name="lon">Lon:</string>
    <string name="lat">Lat:</string>
    <string name="accel">Accelerometer</string>
    <string name="rotate">Rotation Vector</string>
    <string name="magnet">Magnetometer</string>
    <string name="orient">Orientation</string>
    
    <string name="start">Start data collection</string>
    <string name="stop">Stop data collection</string>
    
    <string name="map">Map</string>
    <string name="confirmOrientation">Confirm</string>
    <string name="redoOrientation">Re-Orient</string>
    <string name="forward">Forward</string>
    <string name="turn">Turn</string>
    <string name="defaultAngle">90</string>
    <string name="toMain">Sensor View</string>
    <string name="move">Move</string>
    <string name="defaultDist">5</string>
    
    <string name="empty">EMPTYEMPTYEMPTY</string>
    
    <!-- action bar -->
    <string name="mapmode">Map View</string>
    <string name="debugmode">Debug View</string>
    
    <!-- settings -->
	<string name="sampleRate">Sample Rate</string>
	<string-array name="array_sample_rate">
        <item>Fast</item>
        <item>Normal</item>
        <item>Slow</item>
    </string-array>
    

</resources>
