<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dp1415.ips.MainActivity" >
	
    <!-- Headers -->
    <TextView
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/gps" />
    <TextView
        android:id="@+id/gpsLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gps"
        android:layout_toRightOf="@id/gps"
        android:text="@string/lat" />
   
    <TextView
        android:id="@+id/gpsLon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpsLat"
        android:layout_toRightOf="@id/gps"
        android:text="@string/lon" />
    <TextView
        android:id="@+id/accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpsLon"
        android:text="@string/accel" />
    <TextView
        android:id="@+id/accelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accel"
        android:layout_toRightOf="@id/gps"
        android:text="@string/x" />
    <TextView
        android:id="@+id/accelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelX"
        android:layout_toRightOf="@id/gps"
        android:text="@string/y" />
    <TextView
        android:id="@+id/accelZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelY"
        android:layout_toRightOf="@id/gps"
        android:text="@string/z" />
    <TextView
        android:id="@+id/rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accelZ"
        android:text="@string/rotate" />
    <TextView
        android:id="@+id/rotateX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotate"
        android:layout_toRightOf="@id/gps"
        android:text="@string/x" />
    <TextView
        android:id="@+id/rotateY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateX"
        android:layout_toRightOf="@id/gps"
        android:text="@string/y" />
    <TextView
        android:id="@+id/rotateZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateY"
        android:layout_toRightOf="@id/gps"
        android:text="@string/z" />
    <TextView
        android:id="@+id/rotateS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateZ"
        android:layout_toRightOf="@id/gps"
        android:text="@string/s" />
    
       
    <!-- DATA STARTS HERE -->
     <TextView
        android:id="@+id/gpsLatData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/gpsLat"
        android:text="@string/empty"/>
     <TextView
        android:id="@+id/gpsLonData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/gpsLon"
        android:text="@string/empty"/>
     <TextView
        android:id="@+id/accelXData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/accelX"
        android:text="@string/empty"/>
     <TextView
        android:id="@+id/accelYData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/accelY"
        android:text="@string/empty"/>
     <TextView
        android:id="@+id/accelZData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/accelZ"
        android:text="@string/empty"/>
     <TextView
        android:id="@+id/rotateXData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/rotateX"
        android:text="@string/empty"/>
     <TextView
        android:id="@+id/rotateYData"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gpsLon"
        android:layout_alignBottom="@id/rotateY"
        android:text="@string/empty"/>

     <TextView
         android:id="@+id/rotateZData"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/rotateZ"
         android:layout_toRightOf="@id/gpsLon"
         android:text="@string/empty" />

     <TextView
         android:id="@+id/rotateSData"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/rotateS"
         android:layout_toRightOf="@id/gpsLon"
         android:text="@string/empty" />
     
     <!-- BUTTONS -->
     <Button
        android:id="@+id/startCollect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateS"
        android:text="@string/start"
        android:visibility="visible"
        android:onClick = "onStartClick"/>
     <Button
        android:id="@+id/stopCollect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateS"
        android:text="@string/stop"
        android:visibility="gone"
        android:onClick = "onStopClick"/>
       

</RelativeLayout>
