<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        
	<fragment 
	    android:id="@+id/map"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:name="com.google.android.gms.maps.MapFragment"/>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
		
		<!-- BUTTONS -->
		<Button
			android:id="@+id/confirmOrientation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:text="@string/confirmOrientation"
			android:visibility="visible"
			android:enabled="false"
			android:onClick = "onConfirmOrientationClick"/>
		<Button
			android:id="@+id/redoOrientation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:text="@string/redoOrientation"
			android:visibility="gone"
			android:onClick = "onRedoOrientationClick"/>
		<Button
			android:id="@+id/goForward"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:text="@string/forward"
			android:visibility="gone"
			android:onClick = "onGoForwardClick"/>
		<Button
			android:id="@+id/turn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@id/goForward"
			android:layout_alignParentRight="true"
			android:text="@string/turn"
			android:visibility="gone"
			android:onClick = "onTurnClick"/>
		<EditText
		    android:id="@+id/angle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@id/goForward"
			android:layout_toLeftOf="@id/turn"
			android:inputType="numberDecimal"
			android:visibility="gone"
			android:text="@string/defaultAngle"/>	
		
	

	</RelativeLayout>
	

</FrameLayout>